@@ -7,6 +7,7 @@
     i18n_domain="collective.anysurfer">
 
     <five:registerPackage package="." initialize=".initialize" />
+    <include package=".browser" />
 
     <i18n:registerTranslations directory="locales"/>
 
